Fixed a bunch of errors reported by lint:
! Custom duration values are not supported for Toasts
! <uses-*>-tags have to appear before <application> in AndroidManifest.xml
! Attribute "android:editable" of <EditText> is deprecated
! Converted smileys from gif to png
! Use "Integer.valueOf()" instead of "new Integer()"
! <LinearLayout> was missing explicit orientation-tag
+ Added a lint.xml to suppress unnecessary warnings
* Ignore "Suspicious0dp"-Warning in contact_list.xml
! recycle TypedArrays after use
! explicitly use Locale.US when creating a SimpleDateFormat
! removed invalid layout parameter "layout_column" from TextView in account_list_row.xml
! layout_below is useless in a LinearLayout
! Specify inputType in chat_typing_area.xml

There are still a lot of warnings left, I only fixed things I could test.